# agent-config

./: .gitignore  PROJECT_PLAN.md  README.md  SUPPORT.md  communication.md  engineering.md  install.sh  manifest.toml  settings.json  style.md  test.sh
.github/workflows/: ci.yml
agentconfig/: __init__.py  __main__.py  adapter.py  core.py  manifest.py  model.py  permissions.py  reconcile.py  render.py  rules.py  state.py  tomlfmt.py
agentconfig/adapters/: __init__.py  claude.py  codex.py  crush.py  opencode.py  pi.py
agents/: code-skeptic.md  competitor-scout.md  council-advisor.md  doc-auditor.md  doc-grounded.md  library-scout.md  stack-scout.md
hooks/: README.md  block-secret-commit.sh  format-edited-file.sh  statusline.sh
skills/code-review-deep/: SKILL.md
skills/code-review-deep/references/: blind-spots.md  contract-tracing.md  project-review.md  review-checklist.md  scanner-triage.md
skills/doc-grounded/: SKILL.md
skills/doc-sync/: SKILL.md
skills/doc-sync/lint/: README.md  check-docs.sh  docs-lint.example  docs-lint.yml
skills/human-writer/: SKILL.md
skills/llm-council/: SKILL.md
skills/project-starter/: SKILL.md
skills/project-starter/templates/: claude-md.md  mcp-server.md  python-science.md  rust-cli.md  typescript-tool.md
skills/security-review-deep/: SKILL.md  UPGRADE_CHECKLIST.md
skills/security-review-deep/mcp-server/: README.md  mcp_security_server.py  pyproject.toml
skills/stampede3-debug/: SKILL.md
skills/stampede3-submit/: SKILL.md
tests/: test_claude.py  test_codex.py  test_crush.py  test_opencode.py  test_pi.py
(+2 files in other folders)
